objects/SVMXC__Installed_Product__c.object
<CustomObject>
    <fields>
        <fullName>SVMX_PS_Age__c</fullName>
        <description>Returns a number of the calculates the date/time from installed date to now</description>
        <formula>(TODAY()  -  SVMXC__Date_Installed__c)/365.25</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Returns a number of the calculates the date/time from installed date to now</inlineHelpText>
        <label>Age (In Years)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMX_PS_Current_Uptime__c</fullName>
        <formula>TODAY()-SVMX_PS_Last_Date_Downtime__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Uptime</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMX_PS_Division__c</fullName>
        <description>Denotes the division responsible for the product</description>
        <formula>SVMXC__Product__r.SMAX_PS_Division__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Denotes the division responsible for the product</inlineHelpText>
        <label>Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMX_PS_External_ID__c</fullName>
        <description>Installed Product External ID</description>
        <externalId>true</externalId>
        <label>SAP Equipment Number</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SVMX_PS_IP_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IP Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMX_PS_Instrument_Asset_ID__c</fullName>
        <description>Customers&apos; instrument asset ID number.</description>
        <inlineHelpText>Customers&apos; instrument asset ID number.</inlineHelpText>
        <label>Instrument Asset ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMX_PS_Last_Date_Downtime__c</fullName>
        <label>Last Date Downtime</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SVMX_PS_MTFSI_Date__c</fullName>
        <description>Date of first Case for Mean Time for First Service Incident or question ( Used for determination customer installation experience and training at installation )</description>
        <inlineHelpText>Date of first Case for Mean Time for First Service Incident or question ( Used for determination customer installation experience and training at installation )</inlineHelpText>
        <label>MTFSI Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SVMX_PS_MTFSI__c</fullName>
        <description>Mean Time for First Service Incident or question (used for determination customer installation experience and training at installation). Expressed in number of whole days.</description>
        <formula>IF (NOT(ISBLANK(SVMX_PS_MTFSI_Date__c)), (SVMX_PS_MTFSI_Date__c - SVMXC__Date_Installed__c), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Mean Time for First Service Incident or question (used for determination customer installation experience and training at installation). Expressed in number of whole days.</inlineHelpText>
        <label>MTFSI</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMX_PS_Module__c</fullName>
        <description>Module of Installed Product</description>
        <inlineHelpText>Module of Installed Product</inlineHelpText>
        <label>Module</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SVMX_PS_Public_Tender_Notes__c</fullName>
        <description>notes on equipments/customer with important information such as special prices in case of Public Tender</description>
        <inlineHelpText>notes on equipments/customer with important information such as special prices in case of Public Tender</inlineHelpText>
        <label>Public Tender Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SVMX_PS_Regular_Technician__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Regular technician to service the installed product</description>
        <inlineHelpText>Regular technician to service the installed product</inlineHelpText>
        <label>Regular Technician</label>
        <referenceTo>SVMXC__Service_Group_Members__c</referenceTo>
        <relationshipLabel>Installed Products (Regular Technician)</relationshipLabel>
        <relationshipName>Installed_Products1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMX_PS_Serial_Number__c</fullName>
        <description>Unique serial number field that is used to prevent duplicate IPs from being adding to the database by throwing a duplicate error message.</description>
        <label>Dup Serial Number Check</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SVMX_PS_VS_Cloned_From_IP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field represents the field from which the IP was cloned/created when doing Part Swap</description>
        <inlineHelpText>This field represents the field from which the IP was cloned/created when doing Part Swap</inlineHelpText>
        <label>Cloned From IP</label>
        <referenceTo>SVMXC__Installed_Product__c</referenceTo>
        <relationshipLabel>Installed Products (Cloned From IP)</relationshipLabel>
        <relationshipName>SVMX_PS_VS_Cloned_From_IP</relationshipName>
        <type>Lookup</type>
    </fields>
    <recordTypes>
        <fullName>SMAX_PS_Calibrated_Tools</fullName>
        <active>true</active>
        <description>Calibrated Tools Record Type</description>
        <label>Calibrated Tools</label>
    </recordTypes>
    <recordTypes>
        <fullName>SMAX_PS_Installed_Product</fullName>
        <active>true</active>
        <description>Default Installed Record Type</description>
        <label>Installed Product</label>
    </recordTypes>
    <validationRules>
        <fullName>No_Change_to_MTFSI_Date</fullName>
        <active>true</active>
        <description>Once the MTFSI Date has been populated, date cannot be changed</description>
        <errorConditionFormula>NOT(ISBLANK(PRIORVALUE(SVMX_PS_MTFSI_Date__c))) &amp;&amp;  ISCHANGED( SVMX_PS_MTFSI_Date__c)</errorConditionFormula>
        <errorMessage>Date cannot be changed once populated</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_Future_Date_Last_Calibration_Date</fullName>
        <active>true</active>
        <description>Last Calibration Date value cannot be in the future.</description>
        <errorConditionFormula>(SMAX_PS_Last_Calibration_Date__c &gt; TODAY())</errorConditionFormula>
        <errorDisplayField>SMAX_PS_Last_Calibration_Date__c</errorDisplayField>
        <errorMessage>Last Calibration Date cannot be in the future. Please adjust the date and save.</errorMessage>
    </validationRules>
</CustomObject>